Fix bug due to merging User and UserPrivacy models Add Message model
